# community-pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MATHEMATICAL_REVIEW.md  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  render.yaml  supabase.yaml
.github/workflows/: backend-ci.yml  deploy-dry-run.yml  deploy.yml  frontend-ci.yml  release.yml  tag-version.yml
docs/: case-study-response.md  math.md  postgres-graphql-research.md  slicksheet.md  supabase-setup.md
docs/plans/: 2025-01-10-community-pulse-design.md  2025-01-10-community-pulse-poc-implementation.md
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/components/: ClientOnly.tsx  FlowGraph.tsx  TopicCard.tsx
frontend/hooks/: usePulseGraph.ts
frontend/lib/: api.ts
scripts/: fetch_hn_data.py  seed_db.py
src/community_pulse/: __init__.py  config.py
src/community_pulse/analysis/: __init__.py  graph.py  velocity.py
src/community_pulse/api/: __init__.py  app.py
src/community_pulse/api/routes/: health.py  pulse.py
src/community_pulse/db/: __init__.py  connection.py  models.py
src/community_pulse/ingest/: __init__.py  hn_loader.py  topic_extractor.py
src/community_pulse/models/: __init__.py  pulse.py
src/community_pulse/plugins/: __init__.py  base.py  hackernews.py
src/community_pulse/services/: __init__.py  pulse_compute.py  snapshot_store.py
supabase/: config.toml  seed.sql
supabase/functions/: .gitkeep
supabase/migrations/: .gitkeep
tests/: __init__.py  test_integration.py  test_placeholder.py  test_pulse_compute.py
tests/analysis/: test_graph.py  test_mathematical_edge_cases.py
tests/api/: test_health.py  test_pulse_endpoints.py
tests/config/: test_pulse_thresholds.py
tests/db/: test_connection.py  test_connection_concurrency.py  test_models.py
tests/ingest/: __init__.py  test_hn_loader.py
tests/models/: test_pulse.py
tests/plugins/: __init__.py  test_hackernews_caching.py  test_hackernews_errors.py
tests/scripts/: test_seed_db.py
