[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "community-pulse"
version = "0.1.7"
description = "Community Pulse backend utilities"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0,<1.0",
    "uvicorn[standard]>=0.38.0,<1.0",
    "pydantic>=2.12.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "httpx>=0.28.1",
    "rustworkx>=0.17.1",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
# Installed via `uv sync --all-groups` for development
"dev" = [
    "ruff>=0.14.8,<1.0",
    "mypy>=1.19.0,<2.0",
    "pytest>=9.0.0,<10.0",
    "pytest-cov>=5.0.0,<6.0",
    "pre-commit>=4.5.0,<5.0",
]

[tool.hatch.build]
packages = ["src/community_pulse"]
include = ["src/community_pulse/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/community_pulse",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
    "slow: Tests that take longer to run",
    "network: Tests that require network access",
    "tdd: Test-driven development tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "PL", "D"]
extend-ignore = ["E203", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = [
    "PLR2004",
    "PT009",
    "PT011",
    "RUF001",
    "RUF002",
    "RUF003",
    "S101",
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D202",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
mypy_path = "./src"
explicit_package_bases = true
namespace_packages = true
exclude = ['^\.venv', '^\.uv-cache', '^fix_.*\.py$']

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false

# Note: seed_db uses inline type: ignore for dotenv import

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
# For uv >=0.4 group syntax
"dev" = [
    "ruff>=0.14.8,<1.0",
    "mypy>=1.19.0,<2.0",
    "pytest>=9.0.0,<10.0",
    "pytest-cov>=5.0.0,<6.0",
    "pre-commit>=4.5.0,<5.0",
    "ty>=0.0.1a33",
]
